build: rename $REDIS_URL to $REDISCLOUD_URL in airflow.cfg

--- a/airflow.cfg
+++ b/airflow.cfg
@@ -2,12 +2,12 @@
 # https://airflow.apache.org/docs/apache-airflow/stable/configurations-ref.html
 
 [celery]
-broker_url = $REDIS_URL
-result_backend = $REDIS_URL
+broker_url = $REDISCLOUD_URL
+result_backend = $REDISCLOUD_URL
 worker_concurrency = $AIRFLOW__CELERY__WORKER_CONCURRENCY
 
 [core]
-broker_url = $REDIS_URL
+broker_url = $REDISCLOUD_URL
 executor = CeleryExecutor
 load_examples = False
 
